# can-systyem-integration

./: .gitignore  README.md  spare_cpp_hardware_interface.cpp
launch_files/: arm_hardware.launch.py  arm_test.py  cam_recorder.sh  moveit_launch.py  rover-start.py  wheel_test.py
luxonis_scripts/: luxonis_encode_gstreamer.py  open_gstreamer_stream.sh
scripts/: SIMULATION.md  motor_cansend_toggle.sh  simulate_motor_controller.sh
src/absenc_interface/src/: absenc_node.cpp
src/arm_controller/src/: arm_controller_node.cpp
src/can-integration/: CMakeLists.txt  ReadMe.txt  package.xml
src/can-integration/BAB-utils/: CMakeLists.txt  package.xml
src/can-integration/BAB-utils/include/BAB-utils/: battery_board.hpp
src/can-integration/arm_can_hardware/: CMakeLists.txt  arm_can_hardware.xml  package.xml
src/can-integration/arm_can_hardware/include/arm_can_hardware/: arm_can_interface.hpp
src/can-integration/arm_can_hardware/src/: arm_can_interface.cpp
src/can-integration/bab-board/: CMakeLists.txt  package.xml
src/can-integration/bab-board/include/BAB-utils/: battery_board.hpp  produce_diagnostics.hpp
src/can-integration/bab-board/include/bab-board/: battery_board.hpp  produce_diagnostics.hpp
src/can-integration/bab-board/src/: battery_board.cpp  produce_diagnostics.cpp
src/can-integration/bab-utils/: CMakeLists.txt  package.xml
src/can-integration/bab-utils/include/BAB-utils/: battery_board.hpp
src/can-integration/can-utils/: CMakeLists.txt  package.xml
src/can-integration/can-utils/include/can-utils/: CanRXmanager.hpp  buildAddress.hpp  can_connect.hpp  can_interface.hpp  parser.hpp  prefixes.hpp  spark_max_feedback.hpp  system_controller.hpp
src/can-integration/can-utils/src/: CanRXmanager.cpp  can_connect.cpp  can_interface.cpp  spark_max_feedback.cpp  system_contorller.cpp  system_controller.cpp
src/can-integration/can_safety_node/: CMakeLists.txt  package.xml
src/can-integration/can_safety_node/include/can_safety_node/: can_safety_node.hpp
src/can-integration/can_safety_node/launch/: safety.launch.py
src/can-integration/can_safety_node/src/: can_safety_node.cpp
src/can-integration/docs/: BAB-docs.md  controller-controls-guide.md  servo_can_frames.md
src/can-integration/encoder-boards/: CMakeLists.txt  package.xml
src/can-integration/include/: buildAddress.hpp  can_controller_node.hpp  can_interface.hpp  framer.hpp  parser.hpp  prefixes.hpp  rev_motor_controller.h  sil_controller.hpp  system_controller.hpp
src/can-integration/ros2_wrapper/: CMakeLists.txt  package.xml
src/can-integration/ros2_wrapper/include/ros2_wrapper/: can_controller_node.hpp
src/can-integration/ros2_wrapper/src/: can_controller_node.cpp  sendServoCmds.cpp
src/can-integration/sil-board/: CMakeLists.txt  README.md  package.xml
src/can-integration/sil-board/msg/: LedCommand.msg
src/can-integration/sil-board/scripts/: sil_board_joy_teleop.py  sil_board_presets.py  sil_board_teleop.py
src/can-integration/sil-board/src/: Compat-README.md  compat_board_node.cpp  sil_board_node.cpp
src/can-integration/src/: can_controller_node.cpp  can_interface.cpp  rev_motor_controller.cpp  system_controller.cpp  test.cpp
src/can-integration/tests/: test  test.cpp
src/can-integration/wheel_can_hardware/: CMakeLists.txt  package.xml  wheel_can_hardware.xml
src/can-integration/wheel_can_hardware/config/: wheel_controllers.yaml
src/can-integration/wheel_can_hardware/include/wheel_can_hardware/: wheel_can_interface.hpp  wheel_odometry_node.hpp
src/can-integration/wheel_can_hardware/launch/: ros2_control_wheels.launch.py  wheels.launch.py
src/can-integration/wheel_can_hardware/src/: wheel_can_interface.cpp  wheel_odometry_node.cpp
src/can-integration/wheel_can_hardware/urdf/: rover_wheels.ros2_control.xacro  test_rover_wheels.urdf.xacro
src/gps_py/: package.xml  setup.py
src/gps_py/gps_py/: markers_node.py
src/inverse-kinematics/arm_hardware/: CMakeLists.txt  package.xml  rover_hardware_interface.xml
src/inverse-kinematics/arm_hardware/include/arm_hardware/: arm_controller_node.h  arm_interface.hpp
src/inverse-kinematics/arm_hardware/src/: absenc.cpp  arm_interface.cpp
src/inverse-kinematics/ik_mux_controller/: CMakeLists.txt  package.xml
src/inverse-kinematics/ik_mux_controller/src/: ik_mux.cpp  ik_mux_nxt.cpp
src/inverse-kinematics/rover_arm_bringup/: CMakeLists.txt  package.xml
src/inverse-kinematics/rover_arm_bringup/config/: kinematics.yaml  ros2_controllers.yaml  rover_arm.srdf  servo_config.yaml
src/inverse-kinematics/rover_arm_bringup/launch/: servo_launch.py  servo_launch.xml
src/inverse-kinematics/rover_arm_description/: CMakeLists.txt  package.xml
src/inverse-kinematics/rover_arm_description/launch/: arm.launch.xml
src/inverse-kinematics/rover_arm_description/rviz/: urdf_config.rviz
src/inverse-kinematics/rover_arm_description/urdf/: arm.urdf.xacro  arm.xacro  common_properties.xacro  gripper.xacro  rover_arm.ros2_control.xacro
src/inverse-kinematics/rover_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/inverse-kinematics/rover_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover_arm.ros2_control.xacro  rover_arm.urdf.xacro  servo_config.yaml
src/joy_mux_controller/: CMakeLists.txt  package.xml  setup.py
src/joy_mux_controller/src/: joy_mux_controller.cpp
src/joy_mux_controller_cpp/: CMakeLists.txt  package.xml
src/joy_mux_controller_cpp/src/: joy_mux_controller.cpp
src/joy_mux_controller_py/: package.xml  setup.cfg  setup.py
src/joy_mux_controller_py/joy_mux_controller_py/: joy_mux_cntrl_VKB.py  joy_mux_controller.py
src/wheels_controller/src/: can_controller.cpp  rev_motor_controller.cpp  wheels_controller_node.cpp  wheels_controller_node.h
