<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_safety_node</name>
  <version>0.0.0</version>
  <description>
    Standalone joystick-driven safety node that emits CAN force-stop / resume
    frames for the rover wheel hub. Decouples the safety path from the
    higher-level ros2_control hardware interfaces.
  </description>
  <maintainer email="michael.lythgoe@spaceconcordia.ca">mike</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>can-utils</depend>
  <depend>ros2_fmt_logger</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
