<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_can_hardware</name>
  <version>0.0.0</version>
  <description>
    ros2_control SystemInterface plugin for the rover's six SPARK MAX wheel
    motors over CAN. Reads STATUS_2 velocity/position feedback and applies an
    optional anti-slip differential before sending motor commands.
  </description>
  <maintainer email="michael.lythgoe@spaceconcordia.ca">mike</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>can-utils</depend>
  <depend>ros2_fmt_logger</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
